# optimization_n_safety

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: cleanup-caches.yml  code-validation.yml  dependabot-auto-merge.yml  packages-validation.yml  release.yml
configs/git/hooks/: pre-commit  pre-push
modules/broken-app/: Cargo.toml
modules/broken-app/artifacts/after/: baseline_after.txt  criterion_after.txt
modules/broken-app/artifacts/after/logs/: cargo_run_demo_asan_log.txt  cargo_run_demo_log.txt  cargo_run_demo_miri_log.txt  cargo_run_demo_valgrind_log.txt  cargo_test_log.txt  cargo_test_miri_log.txt  cargo_test_valgrind_log.txt
modules/broken-app/artifacts/before/: baseline_before.txt  criterion_before.txt
modules/broken-app/artifacts/before/logs/: cargo_run_demo_asan_log.txt  cargo_run_demo_log.txt  cargo_run_demo_miri_log.txt  cargo_run_demo_tsan_log.txt  cargo_run_demo_valgrind_log.txt  cargo_test_log.txt  cargo_test_miri_log.txt  cargo_test_valgrind_log.txt
modules/broken-app/benches/: baseline.rs  criterion.rs
modules/broken-app/src/: algo.rs  concurrency.rs  lib.rs
modules/broken-app/tests/: integration.rs
modules/reference-app/: Cargo.toml
modules/reference-app/benches/: baseline.rs  criterion.rs
modules/reference-app/src/: algo.rs  concurrency.rs  lib.rs
modules/reference-app/tests/: integration.rs
